--- a/Home.css
+++ b/Home.css
@@ -1,54 +1,169 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 797px;
+  min-height: 1509px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 570px;
-  height: 278px;
-  margin: 82px auto 0 233px;
+  width: 792px;
+  height: 382px;
+  margin: 12px auto 0;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 54px auto 60px 258px;
+  margin: 20px auto 0 258px;
+}
+
+.u-section-1 .u-text-2 {
+  font-weight: 700;
+  font-size: 3rem;
+  margin: 165px 39px 0 auto;
+}
+
+.u-section-1 .u-text-3 {
+  font-weight: 700;
+  font-size: 3.75rem;
+  margin: -57px auto 0 104px;
+}
+
+.u-section-1 .u-image-2 {
+  width: 570px;
+  height: 287px;
+  margin: 12px auto 0 0;
+}
+
+.u-section-1 .u-image-3 {
+  width: 570px;
+  height: 287px;
+  margin: -287px -52px 0 auto;
+}
+
+.u-section-1 .u-image-4 {
+  width: 337px;
+  height: 101px;
+  margin: 20px auto 0 117px;
+}
+
+.u-section-1 .u-image-5 {
+  width: 337px;
+  height: 101px;
+  margin: -101px 27px 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1458px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 186px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: -93px;
+  }
+
+  .u-section-1 .u-image-2 {
+    width: 470px;
+    height: 236px;
+  }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1368px;
+  }
+
   .u-section-1 .u-image-1 {
-    margin-left: 150px;
+    width: 720px;
+    height: 348px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 198px;
   }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 131px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: -38px;
+  }
+
+  .u-section-1 .u-image-2 {
+    width: 360px;
+    height: 181px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 783px;
+    min-height: 1236px;
   }
 
   .u-section-1 .u-image-1 {
     width: 540px;
-    height: 264px;
-    margin-left: 0;
+    height: 261px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 149px;
   }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 86px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 7px;
+  }
+
+  .u-section-1 .u-image-2 {
+    width: 270px;
+    height: 136px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 685px;
+    min-height: 975px;
   }
 
   .u-section-1 .u-image-1 {
     width: 340px;
-    height: 166px;
+    height: 164px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 94px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.5rem;
+    margin-top: -131px;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-size: 1.5rem;
+    margin-top: 268px;
+  }
+
+  .u-section-1 .u-image-2 {
+    width: 170px;
+    height: 86px;
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-image-3 {
+    width: 340px;
+    height: 171px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-left: 3px;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-right: 3px;
   }
 }
