--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 1509px;
+  min-height: 1653px;
 }
 
 .u-section-1 .u-image-1 {
@@ -12,28 +12,16 @@
   margin: 20px auto 0 258px;
 }
 
-.u-section-1 .u-text-2 {
-  font-weight: 700;
-  font-size: 3rem;
-  margin: 165px 39px 0 auto;
-}
-
-.u-section-1 .u-text-3 {
-  font-weight: 700;
-  font-size: 3.75rem;
-  margin: -57px auto 0 104px;
-}
-
 .u-section-1 .u-image-2 {
   width: 570px;
   height: 287px;
-  margin: 12px auto 0 0;
+  margin: 249px auto 0 27px;
 }
 
 .u-section-1 .u-image-3 {
   width: 570px;
   height: 287px;
-  margin: -287px -52px 0 auto;
+  margin: -287px -66px 0 auto;
 }
 
 .u-section-1 .u-image-4 {
@@ -45,87 +33,95 @@
 .u-section-1 .u-image-5 {
   width: 337px;
   height: 101px;
-  margin: -101px 27px 60px auto;
+  margin: -101px 39px 60px auto;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1458px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 186px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: -93px;
-  }
-
   .u-section-1 .u-image-2 {
-    width: 470px;
-    height: 236px;
+    width: 514px;
+    height: 259px;
+    margin-top: 178px;
+    margin-left: 196px;
+  }
+
+  .u-section-1 .u-image-3 {
+    width: 514px;
+    height: 259px;
+    margin-top: 238px;
+    margin-right: auto;
+    margin-left: 196px;
+  }
+
+  .u-section-1 .u-image-4 {
+    width: 233px;
+    height: 79px;
+    margin-top: -474px;
+    margin-left: 337px;
+  }
+
+  .u-section-1 .u-image-5 {
+    width: 247px;
+    height: 74px;
+    margin-top: 433px;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1368px;
+    min-height: 1618px;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
-    height: 348px;
+    height: 347px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 198px;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 131px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: -38px;
-  }
-
-  .u-section-1 .u-image-2 {
-    width: 360px;
-    height: 181px;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1236px;
+    min-height: 1531px;
   }
 
   .u-section-1 .u-image-1 {
     width: 540px;
-    height: 261px;
+    height: 260px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 149px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 86px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 7px;
-  }
-
   .u-section-1 .u-image-2 {
-    width: 270px;
-    height: 136px;
+    margin-left: 26px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-top: 249px;
+    margin-right: 0;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    width: 250px;
+    height: 78px;
+    margin-top: -496px;
+    margin-right: 126px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-top: 445px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 975px;
+    min-height: 1320px;
   }
 
   .u-section-1 .u-image-1 {
@@ -137,33 +133,30 @@
     margin-left: 94px;
   }
 
-  .u-section-1 .u-text-2 {
-    font-size: 1.5rem;
-    margin-top: -131px;
-  }
-
-  .u-section-1 .u-text-3 {
-    font-size: 1.5rem;
-    margin-top: 268px;
-  }
-
   .u-section-1 .u-image-2 {
-    width: 170px;
-    height: 86px;
-    margin-top: 20px;
+    height: 171px;
+    margin-top: 152px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-3 {
-    width: 340px;
     height: 171px;
-    margin-right: 0;
+    width: 340px;
+    margin-top: 259px;
+    margin-right: -13px;
   }
 
   .u-section-1 .u-image-4 {
-    margin-left: 3px;
+    width: 220px;
+    height: 63px;
+    margin-top: -418px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-5 {
-    margin-right: 3px;
+    margin-top: 375px;
+    margin-right: 33px;
   }
 }
