--- a/nicepage.css
+++ b/nicepage.css
@@ -38943,13 +38943,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 111px;
+  min-height: 113px;
 }
 
 .u-header .u-image-1 {
-  width: 113px;
-  height: 113px;
-  margin: 0 auto 0 -11px;
+  width: 211px;
+  height: 211px;
+  margin: -41px auto 0 -79px;
 }
 
 .u-header .u-logo-image-1 {
@@ -38958,7 +38958,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -56px 0 20px auto;
+  margin: -113px 0 20px auto;
 }
 
 .u-header .u-nav-1 {
