--- a/Home.css
+++ b/Home.css
@@ -1,187 +1,84 @@
-.u-section-1 .u-sheet-1 {
-  min-height: 1653px;
+ .u-section-1 {
+  background-image: linear-gradient(#adf6f2, #f9e79b);
 }
 
-.u-section-1 .u-image-1 {
-  width: 792px;
-  height: 382px;
-  margin: 12px auto 0;
+.u-section-1 .u-sheet-1 {
+  min-height: 1015px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 20px auto 0 258px;
-}
-
-.u-section-1 .u-image-2 {
-  width: 337px;
-  height: 101px;
+  font-weight: 700;
   margin: 0 auto;
 }
 
-.u-section-1 .u-image-3 {
-  width: 588px;
-  height: 287px;
-  margin: 148px auto 0 27px;
+.u-section-1 .u-image-1 {
+  width: 352px;
+  height: 625px;
+  margin: 31px auto 0 0;
 }
 
-.u-section-1 .u-image-4 {
-  width: 570px;
-  height: 287px;
-  margin: -287px -66px 0 auto;
+.u-section-1 .u-video-1 {
+  width: 533px;
+  height: 300px;
+  margin: -625px 242px 60px auto;
 }
 
-.u-section-1 .u-image-5 {
-  width: 337px;
-  height: 101px;
-  margin: 20px auto 0 114px;
-}
-
-.u-section-1 .u-image-6 {
-  width: 337px;
-  height: 101px;
-  margin: -101px 39px 60px auto;
+.u-section-1 .embed-responsive-1 {
+  position: absolute;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-right: 117px;
-    margin-left: auto;
+  .u-section-1 .u-image-1 {
+    height: 626px;
+    margin-top: 57px;
+    margin-left: 33px;
   }
 
-  .u-section-1 .u-image-2 {
-    width: 288px;
-    height: 76px;
-    margin-right: 306px;
-  }
-
-  .u-section-1 .u-image-3 {
-    width: 514px;
-    height: 259px;
-    margin-top: 102px;
-    margin-left: 196px;
-  }
-
-  .u-section-1 .u-image-4 {
-    width: 514px;
-    height: 259px;
-    margin-top: 238px;
-    margin-right: auto;
-    margin-left: 196px;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 233px;
-    height: 79px;
-    margin-top: -474px;
-    margin-left: 337px;
-  }
-
-  .u-section-1 .u-image-6 {
-    width: 247px;
-    height: 74px;
-    margin-top: 433px;
-    margin-right: auto;
+  .u-section-1 .u-video-1 {
+    margin-top: -626px;
+    margin-right: 22px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1618px;
-  }
-
   .u-section-1 .u-image-1 {
-    width: 720px;
-    height: 347px;
+    margin-top: -22px;
+    margin-left: 0;
   }
 
-  .u-section-1 .u-text-1 {
-    margin-top: 5px;
+  .u-section-1 .u-video-1 {
     margin-right: auto;
-    margin-left: 38px;
-  }
-
-  .u-section-1 .u-image-2 {
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-image-3 {
-    margin-top: 117px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1508px;
-  }
-
   .u-section-1 .u-image-1 {
-    width: 540px;
-    height: 260px;
+    margin-top: 4px;
+    margin-left: -50px;
   }
 
-  .u-section-1 .u-image-3 {
-    margin-left: 26px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-top: 249px;
-    margin-right: 0;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 250px;
-    height: 78px;
-    margin-top: -496px;
-    margin-right: 126px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-image-6 {
-    margin-top: 445px;
+  .u-section-1 .u-video-1 {
+    margin-left: -50px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1198px;
+    min-height: 885px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 21px;
   }
 
   .u-section-1 .u-image-1 {
+    margin-top: 11px;
+  }
+
+  .u-section-1 .u-video-1 {
     width: 340px;
-    height: 164px;
-  }
-
-  .u-section-1 .u-image-2 {
-    width: 197px;
-    height: 59px;
-  }
-
-  .u-section-1 .u-image-3 {
-    height: 166px;
-    margin-top: 68px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-4 {
-    height: 171px;
-    width: 340px;
-    margin-top: 259px;
-    margin-right: -13px;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 220px;
-    height: 63px;
-    margin-top: -418px;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-image-6 {
-    margin-top: 375px;
-    margin-right: 33px;
+    height: 191px;
+    margin-top: -605px;
   }
 }
