--- a/Privacy-Policy.css
+++ b/Privacy-Policy.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2567px;
+  min-height: 2647px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,7 +11,7 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 29px -11px 0 11px;
+  margin: 29px 0 47px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -40,12 +40,7 @@
 }
 
 .u-section-1 .u-btn-6 {
-  border-style: solid;
-  font-size: 1.125rem;
-  font-weight: normal;
-  text-transform: none;
-  letter-spacing: normal;
-  margin: -1623px auto 1595px 20px;
+  background-image: none;
   padding: 0;
 }
 
@@ -58,17 +53,6 @@
     margin-right: 202px;
     margin-left: 278px;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -1792px;
-    margin-bottom: 60px;
-    margin-left: 6px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -79,11 +63,6 @@
   .u-section-1 .u-text-1 {
     margin-right: 92px;
     margin-left: 168px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -2070px;
-    margin-left: 0;
   }
 }
 
@@ -96,10 +75,6 @@
     margin-right: 2px;
     margin-left: 78px;
   }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -2102px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -110,9 +85,5 @@
   .u-section-1 .u-text-1 {
     margin-right: 0;
     margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: -2874px;
   }
 }
